--- a/init.el.org
+++ b/init.el.org
@@ -197,7 +197,7 @@ I dig helm. I don't care much for ido.
 I like the bleeding edge. Heck, I compiled my emacs from git :-)
 [GNU Emacs 25.0.93.2 (x86_64-unknown-linux-gnu, GTK+ Version 3.16.7) of 2016-04-28]
 On org-agenda-files, the documentation says:
-#begin+quote
+#+begin_quote
 If the value of the variable is not a list but a single file name, then
 the list of agenda files is actually stored and maintained in that file, one
 agenda file per line.  In this file paths can be given relative to
