--- a/init.el.org
+++ b/init.el.org
@@ -72,6 +72,20 @@ Elisp is so cool.
 
 * Code
 ** General
+#+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
+  (use-package anzu
+    :bind
+    (([remap query-replace]        . anzu-query-replace)
+     ([remap query-replace-regexp] . anzu-query-replace-regexp))
+    :config
+    (setq anzu-mode-lighter ""
+	  anzu-deactivate-region t
+	  anzu-search-threshold 1000
+	  anzu-replace-threshold 50
+	  anzu-replace-to-string-separator " => ")
+    (global-anzu-mode +1))
+#+end_src
+
 I need to learn to make this not stomp on eldoc like it does sometimes.
 #+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
 (use-package flycheck
@@ -113,7 +127,7 @@ This is always helpful.
   (setq whitespace-style '(face tabs empty trailing lines-tail))
 #+end_src
 ** C/C++
-#+begin_src emacs-lisp :tangle init.el
+#+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
 (use-package irony
   :ensure t
   :defer t
